--- a/index.html
+++ b/index.html
@@ -7,12 +7,19 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   <cheader class="topbar">
-    <div class="container"
-    <h1 class="logo">Aruan</h1>
-    <nav>
-        <ul class="menu">
-            <li></li>
-        </ul>
+   <header class="topbar">
+        <div class="container"
+            <h1 class="logo">Aruan</h1>
+            <nav>
+                <ul class="menu">
+                    <li><a href="#">Inicio/</a></li>
+                    <li><a href="#">Sobre</a>/</a></li>
+                    <li><a href="#">Quartos/</a></li>
+                    <li><a href="#">Contato/</a></li>
+                </ul>
+            </nav>
+            <a href="#" class=""btn-header">Resrvar</a>
+        </div>    
+    </header>
 </body>
 </html>
